--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A general client-side repository for experimenting with React, Typescript, CSS and other subjects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack server --port 3000",
+    "build": "NODE_ENV=production && webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/davidgu13/react-sandbox/issues"
   },
-  "homepage": "https://github.com/davidgu13/react-sandbox#readme"
+  "homepage": "https://github.com/davidgu13/react-sandbox#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.3",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
+  }
 }
