--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name": "react-sandbox",
-  "version": "1.0.0",
-  "description": "A general client-side repository for experimenting with React, Typescript, CSS and other subjects",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack server --port 3000",
-    "build": "NODE_ENV=production && webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/davidgu13/react-sandbox.git"
-  },
-  "author": "David Guriel",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/davidgu13/react-sandbox/issues"
-  },
-  "homepage": "https://github.com/davidgu13/react-sandbox#readme",
-  "devDependencies": {
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "css-loader": "^6.7.3",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.3",
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "name": "react-sandbox",
+    "version": "1.0.0",
+    "description": "A general client-side repository for experimenting with React, Typescript, CSS and other subjects",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack serve --port 3000",
+        "build": "set NODE_ENV=production && webpack",
+        "lint": "npx eslint src/*",
+        "lint-fix": "npx eslint src/* --fix"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/davidgu13/react-sandbox.git"
+    },
+    "author": "David Guriel",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/davidgu13/react-sandbox/issues"
+    },
+    "homepage": "https://github.com/davidgu13/react-sandbox#readme",
+    "devDependencies": {
+        "@types/react": "^18.0.33",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "css-loader": "^6.7.3",
+        "eslint": "^8.37.0",
+        "eslint-plugin-react": "^7.32.2",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.7.5",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.3",
+        "webpack": "^5.78.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.2"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    }
 }
