--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@typescript-eslint/parser": "^5.57.1",
         "css-loader": "^6.7.3",
         "eslint": "^8.37.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-react": "^7.32.2",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.7.5",
