--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A general client-side repository for experimenting with React, Typescript, CSS and other subjects",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "webpack serve --port 3000",
         "build": "set NODE_ENV=production && webpack",
         "lint": "npx eslint src/*",
@@ -21,6 +21,8 @@
     },
     "homepage": "https://github.com/davidgu13/react-sandbox#readme",
     "devDependencies": {
+        "@jest/globals": "^29.5.0",
+        "@types/jest": "^29.5.0",
         "@types/react": "^18.0.33",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -31,6 +33,7 @@
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-react": "^7.32.2",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.5",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.3",
@@ -39,6 +42,10 @@
         "webpack-dev-server": "^4.13.2"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.11.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
