--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.11.16",
+        "@tanstack/react-query-devtools": "^4.29.3",
+        "axios": "^1.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-lorem-ipsum": "^1.4.10"
+        "react-lorem-ipsum": "^1.4.10",
+        "react-query": "^3.39.3"
     }
 }
