--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/davidgu13/react-sandbox#readme",
     "devDependencies": {
         "@jest/globals": "^29.5.0",
+        "@tanstack/react-query-devtools": "^4.29.3",
         "@types/jest": "^29.5.0",
         "@types/react": "^18.0.33",
         "@types/react-dom": "^18.0.11",
@@ -37,7 +38,7 @@
         "jest": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.5",
         "ts-loader": "^9.4.2",
-        "typescript": "^5.0.3",
+        "typescript": "^5.0.4",
         "webpack": "^5.78.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.13.2"
@@ -47,11 +48,12 @@
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.11.16",
-        "@tanstack/react-query-devtools": "^4.29.3",
+        "@tanstack/react-query": "^4.29.3",
+        "@testing-library/react": "^14.0.0",
         "axios": "^1.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-lorem-ipsum": "^1.4.10",
-        "react-query": "^3.39.3"
+        "react-virtuoso": "^4.3.1"
     }
 }
