--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "@jest/globals": "^29.5.0",
         "@tanstack/react-query-devtools": "^4.29.3",
+        "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.0",
         "@types/react": "^18.0.33",
         "@types/react-dom": "^18.0.11",
@@ -36,7 +37,10 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.5",
+        "react-test-renderer": "^18.2.0",
+        "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "webpack": "^5.78.0",
@@ -49,11 +53,11 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.11.16",
         "@tanstack/react-query": "^4.29.3",
-        "@testing-library/react": "^14.0.0",
         "axios": "^1.3.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-lorem-ipsum": "^1.4.10",
-        "react-virtuoso": "^4.3.1"
+        "react-virtuoso": "^4.3.1",
+        "ts-node": "^10.9.1"
     }
 }
